2007-04-23  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
	
	* mlstats.egg-info/SOURCES.txt:
	* mlstats.egg-info/top_level.txt:
	* mlstats.egg-info/PKG-INFO:
	* mlstats.egg-info/dependency_links.txt:

	Added Python egg info. This is a requirement for the Debian package.
	

2007-03-27  Roberto Andradas Izquierdo <randradas@gsyc.esceturjc.es>

	* Fixed a little error with the README file, there was a reference to cvsanaly instead of MLSstats

2007-03-22  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Added check to find out how many messages are ignored by the parser
	* Solved bug 227 (http://forge.morfeo-project.org/tracker/?func=detail&atid=238&aid=227&group_id=33)
	
2007-03-21  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Release 0.3.1
	* Solved bug 222 (http://forge.morfeo-project.org/tracker/?func=detail&atid=238&aid=222&group_id=33)

2007-03-20  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Release 0.3

2007-03-15  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Updated contact information
	* Add fileextractor module for cross-platform compressed files managing
	* All the extraction and file handling (copying to cache and so) is now cross-platform (it uses the Python standard modules)

2007-03-15  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* First tested version
	* It can retrieve the archives from a remote URL, or scan a directory recursively looking for mboxes

2007-03-09  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Initial import 


