@@ -1,12 +1,20 @@
 2007-04-23  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
 	
+	* pymlstats/database.py:
+	
+	Changed the handling of exceptions. When a unknown error happens parsing a message,
+	the message is ignored and the message-id written to stderr along with a warning message.
+	When connecting to a database, unknown errors are written to stderr and the execution stopped.
+	This is related to bug #237, in order to get more meaningful and brief error messages.
+
+2007-04-23  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
+	
 	* mlstats.egg-info/SOURCES.txt:
 	* mlstats.egg-info/top_level.txt:
 	* mlstats.egg-info/PKG-INFO:
 	* mlstats.egg-info/dependency_links.txt:
 
 	Added Python egg info. This is a requirement for the Debian package.
-	
 
 2007-03-27  Roberto Andradas Izquierdo <randradas@gsyc.esceturjc.es>
 
